--- a/ml_classwork.ipynb
+++ b/ml_classwork.ipynb
@@ -2,18 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(df) \n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Year          Driver             Team  Points\n",
+      "0  2023  Max Verstappen  Red Bull Racing   575.0\n",
+      "1  2022  Max Verstappen  Red Bull Racing   454.0\n",
+      "2  2021  Max Verstappen  Red Bull Racing   395.5\n",
+      "3  2020  Lewis Hamilton         Mercedes   347.0\n",
+      "4  2019  Lewis Hamilton         Mercedes   413.0\n",
+      "5  2018  Lewis Hamilton         Mercedes   408.0\n",
+      "6  2017  Lewis Hamilton         Mercedes   363.0\n",
+      "7  2016    Nico Rosberg         Mercedes   385.0\n",
+      "8  2015  Lewis Hamilton         Mercedes   381.0\n",
+      "9  2014  Lewis Hamilton         Mercedes   384.0\n"
      ]
     }
    ],
@@ -41,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: 18310.000000000022\n"
+      "Intercept: 3490.0000000000045\n"
      ]
     }
    ],
@@ -56,12 +62,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# Dataset\n",
-    "data = {'Experience': [1, 2, 3, 4, 5], 'Salary': [4000, 5500, 68000, 8000, 1100]}\n",
+    "data = {'Product': [1, 2, 3, 4, 5], 'Profit': [500, 1200, 15000, 2300, 700]}\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "X = df[['Experience']].values\n",
-    "y = df['Salary'].values\n",
+    "X = df[['Product']].values\n",
+    "y = df['Profit'].values\n",
     "\n",
     "X = np.hstack([np.ones((X.shape[0], 1)), X])\n",
     "\n",
@@ -71,8 +76,7 @@
     "mse = np.mean((y - y_pred) ** 2)\n",
     "r2 = 1 - np.sum((y - y_pred) ** 2) / np.sum((y - y.mean()) ** 2)\n",
     "\n",
-    "print(\"Intercept:\", theta[0])\n",
-    "\n"
+    "print(\"Intercept:\", theta[0])\n"
    ]
   },
   {
